tests/snapshots/trace_solver__spanshot_request@11121177789754477958.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_binding_on_inherited: Skip
    mut_binding_on_inherited: Error
    inherited_ref_on_ref: EatInner
    allow_ref_pat_on_ref_mut: true
    simplify_expressions: true
    eat_inherited_ref_alone: true
    downgrade_shared_inside_shared: true
  bundle_name: ergo2024
  request: "&[x]: &[&mut T]"
---
&[x] @ p: &[&mut T]
// Applying rule `Deref(EatOuter)`
[x] @ *p: [&mut T]
// Applying rule `Constructor`
x @ (*p).0: &mut T
// Applying rule `Binding`
let x: &mut T = (*p).0

// Final bindings (simplified):
let x: &mut T = (*p).0 // Borrow-check error: CantCopyRefMut
