tests/snapshots/trace_solver__spanshot_request@11199810385066374460.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: ResetBindingMode
    inherited_ref_on_ref: EatOuter
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    eat_inherited_ref_alone: true
    downgrade_mut_inside_shared: false
    rules_display_style: Plain
  bundle_name: ~
  request: "mut x: &T"
---
mut x @ p: &T
// Applying rule `Binding`
let mut x: &T = p

// Final bindings (simplified):
let mut x: &T = p;
